3 files modified, 1 added

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,6 @@
 <H1>Hello</H1>
-<a class="button fancy-button"
-  ><i class="material-icons">shopping_cart</i>Checkout</a
->
-<button mat-raised-button color="primary" (click)="testclick()">Primary</button>
+<a>
+  <button mat-raised-button color="primary" (click)="testclick()">
+    Primary
+  </button>
+</a>
