4 files modified, 1 added, 1 deleted

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,19 +1,21 @@
-<H1>Hello</H1>
-<a>
-  <button
-    mat-raised-button
-    color="primary"
-    [routerLink]="'/test'"
-    (click)="testclick()"
-  >
-    Primary
-  </button>
-  <button
-    mat-raised-button
-    color="warn"
-    [routerLink]="'/'"
-    (click)="testclick()"
-  >
-    Primary
-  </button>
-</a>
+<div class="container">
+  <H1>Hello</H1>
+  <a>
+    <button
+      mat-raised-button
+      color="primary"
+      [routerLink]="'/test'"
+      (click)="testclick()"
+    >
+      Primary
+    </button>
+    <button
+      mat-raised-button
+      color="warn"
+      [routerLink]="'/'"
+      (click)="testclick()"
+    >
+      Primary
+    </button>
+  </a>
+</div>
