--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,16 @@
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  background: url('/assets/images/background.gif') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
 
-
+body {
+}
 
 /*
 Copyright Google LLC. All Rights Reserved.
