--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<app-landing></app-landing>
+<html>
+  <body>
+    <app-landing></app-landing>
 
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+  </body>
+</html>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
