1 file modified, 1 deleted

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,10 +6,10 @@ html {
   -webkit-background-size: cover;
   -o-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
 }
 
 body {
+  margin: 0px;
 }
 
 /*
