--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,8 @@ html {
   margin: 0px;
   height: 100%;
   width: 100%;
-  background: url('/assets/images/background.gif') no-repeat center center fixed;
+  background: url('/../assets/images/background.gif.gif') no-repeat center
+    center fixed;
   -webkit-background-size: cover;
   -o-background-size: cover;
   -moz-background-size: cover;
