--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,10 +1,16 @@
-<a [routerLink]="['/']">
-  <h1>My Store</h1>
-</a>
+<div id="top-bar">
+  <a [routerLink]="['/']">
+    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+  </a>
 
-<a class="button fancy-button"
-  ><i class="material-icons">shopping_cart</i>Checkout</a
->
+  <a [routerLink]="['/']">
+    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+  </a>
+
+  <a [routerLink]="['/']">
+    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+  </a>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
