--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,21 +1,9 @@
 <div class="container">
   <H1>Hello</H1>
   <a>
-    <button
-      mat-raised-button
-      color="primary"
-      [routerLink]="'/test'"
-      (click)="testclick()"
-    >
+    <button mat-raised-button color="primary" [routerLink]="'/test'">
       Primary
     </button>
-    <button
-      mat-raised-button
-      color="warn"
-      [routerLink]="'/'"
-      (click)="testclick()"
-    >
-      Primary
-    </button>
+    <button mat-raised-button color="warn" [routerLink]="'/'">Primary</button>
   </a>
 </div>
