--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,4 +1,13 @@
-
+#top-bar {
+  padding: 40px 24px;
+  gap: 20px;
+  transition: all 1s 1s ease-in-out;
+  z-index: 99;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+}
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
