--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
     <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
   </a>
 
-  <a [routerLink]="['/']">
+  <a [routerLink]="['/test']">
     <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
   </a>
 
