--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,7 @@
 <h2>Products</h2>
-
+<div class="text-typing">
+  <p>Hi, i am a dog</p>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
