--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <h2>Products</h2>
-<div class="text-typing">
-  <p>Hi, i am a dog!</p>
+<div id="textboxdiv" (click)="nextLine()" class="text-typing">
+  <p id="textbox">Hi, i am a dog!</p>
 </div>
 
 <!-- 
