8 files modified, 1 deleted

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-html {
+/* html {
   margin: 0px;
   height: 100%;
   width: 100%;
@@ -11,7 +11,9 @@ html {
 
 body {
   margin: 0px;
-}
+} */
+
+
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
