--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div id="textboxdiv" (click)="nextLine()" class="text-typing">
-  <p id="textbox">Hi, i am a dog!</p>
+  <p id="textbox"></p>
 </div>
 
 <!-- 
