--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
-<html>
-  <body>
-    <app-top-bar></app-top-bar>
+<div>
+  <app-top-bar></app-top-bar>
 
-    <div class="container">
-      <router-outlet></router-outlet>
-    </div>
-  </body>
-</html>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
