--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,14 +1,20 @@
 <div id="top-bar">
   <a [routerLink]="['/']">
-    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+    <a href="" id="Twitter" target="_blank"
+      ><img src="/../assets/images/1.png" width="64"
+    /></a>
   </a>
 
   <a [routerLink]="['/test']">
-    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+    <a href="" id="Twitter" target="_blank"
+      ><img src="/../assets/images/2.png" width="64"
+    /></a>
   </a>
 
   <a [routerLink]="['/']">
-    <a href="" id="Twitter" target="_blank"><img src="" width="64" /></a>
+    <a href="" id="Twitter" target="_blank"
+      ><img src="/../assets/images/3.png" width="64"
+    /></a>
   </a>
 </div>
 
