--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,9 +1,7 @@
 <div id="top-bar">
-  <a [routerLink]="['/']">
-    <a href="" id="Twitter" target="_blank"
-      ><img src="/../assets/images/1.png" width="64"
-    /></a>
-  </a>
+  <a href="https://twitter.com/" id="Twitter" target="_blank"
+    ><img src="/../assets/images/1.png" width="64"
+  /></a>
 
   <a [routerLink]="['/test']">
     <a href="" id="Twitter" target="_blank"
