--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -7,6 +7,11 @@
   border-radius: 50px;
   margin: auto;
   width: 70%;
+
+  left: 10%;
+  right: 10%;
+  bottom: 10%;
+  position: fixed;
 }
 .text-typing p {
   margin: 0px;
