--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -6,8 +6,9 @@
   font-family: 'Possible', monospace;
   border-radius: 50px;
   margin: auto;
-  width: 70%;
 
+  /* Try bottom */
+  /* width: 70%; */
   left: 10%;
   right: 10%;
   bottom: 10%;
