--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,9 @@
+<a class="mainPageBtn" [routerLink]="['/MainPage']">
+  <a href="" id="mainPageBtn" class="mainPageBtn" target="_blank"
+    ><img src="/../assets/images/2.png" width="64"
+  /></a>
+</a>
+
 <div id="textboxdiv" (click)="nextLine()" class="text-typing">
   <p id="textbox"></p>
 </div>
