--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div>
-  <app-top-bar></app-top-bar>
-
+  <!-- <app-top-bar></app-top-bar> -->
   <div class="container">
     <router-outlet></router-outlet>
   </div>
