--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,6 +6,7 @@
 
 <div id="textboxdiv" (click)="nextLine()" class="text-typing">
   <p id="textbox"></p>
+  <span id="showArrow" class="showArrow">&#9660;</span>
 </div>
 
 <!-- 
