--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,8 @@
+<app-top-bar></app-top-bar>
 <div class="container">
   <H1>Hello</H1>
   <a>
-    <button mat-raised-button color="primary" [routerLink]="'/MainPage'">
+    <button mat-raised-button color="primary" [routerLink]="'/test'">
       Primary
     </button>
     <button mat-raised-button color="warn" [routerLink]="'/'">Primary</button>
